add styles, fix some bugs

--- a/index.html
+++ b/index.html
@@ -3,26 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./style.css" />
 		<title>Document</title>
-
-		<style>
-			.board {
-				width: 500px;
-				height: 500px;
-				border: 2px solid #000;
-			}
-
-			.circle {
-				background-color: red;
-				border-radius: 50%;
-				position: absolute;
-			}
-		</style>
 	</head>
-	<body>
-		<div id="board" class="board"></div>
-		<div class="result"></div>
 
+	<body>
+		<div id="board" class="board">
+			<div class="board__wrapper">
+				<div class="board__options options">
+					<button class="options__item" data-time="20">20s</button>
+					<button class="options__item" data-time="40">40s</button>
+					<button class="options__item" data-time="80">1.20m</button>
+				</div>
+				<div class="timer__display-left">timer 00:00</div>
+			</div>
+		</div>
+
+		<div class="result"></div>
 		<script src="./scripts/script.js"></script>
 	</body>
 </html>
